<resources>
    <string name="app_name">Exchange</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forget_password_string"><u>忘记密码?</u></string>
    <string name="have_no_account_string"><u>尚未有账号？点击这里注册</u></string>
    <string name="change_to_login_string"><u>已有账号了，点击这里登录</u></string>
    <string name="search_string">请输入关键字</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
</resources>
